Adjust project structure
- Setup workspace for typescript
- Edit pretier config file for better workspace

--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="/assets/icons/android-chrome-512x512.png"
+      href="./src/assets/icons/android-chrome-512x512.png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/icons/apple-touch-icon.png"
+      href="./src/assets/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/favicon-32x32.png"
+      href="./src/assets/icons/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/icons/favicon-16x16.png"
+      href="./src/assets/icons/favicon-16x16.png"
     />
 
     <link
@@ -33,13 +33,14 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <script src="./public/js/app.js"></script>
     <title>SwipeBank</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="./src/assets/icons/logo.png" alt="Logo" class="logo" />
       <form class="login">
         <input
           type="text"
@@ -141,7 +142,5 @@
     </main>
 
     <footer>&copy; Instructor: Jonas Schmedtmann. Coded by Erhan Akyel</footer>
-
-    <script src="script.js"></script>
   </body>
 </html>
