Tweak the project to use es6 modules

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <script src="./public/js/app.js"></script>
+    <script src="./public/js/app.js" type="module"></script>
     <title>SwipeBank</title>
   </head>
   <body>
