Create error message for UI

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       </form>
     </nav>
 
+    <div class="error">
+      <p>Wrong id or password. Please try again.</p>
+    </div>
+
     <main class="app">
       <!-- BALANCE -->
       <div class="balance">
