Reorganize helper.ts file for reusable functions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 
     <div class="error">
-      <p>Wrong id or password. Please try again.</p>
+      <p>Error occured.</p>
     </div>
 
     <main class="app">
